sw/source/filter/ww8/docxattributeoutput.cxx
@@ -309,13 +309,12 @@ void DocxAttributeOutput::WriteDMLTextFrame(sw::Frame* pParentFrame)
     uno::Reference< drawing::XShape > xShape( ((SdrObject*)pSdrObj)->getUnoShape(), uno::UNO_QUERY );
     uno::Reference< beans::XPropertySet > xPropertySet( xShape, uno::UNO_QUERY );
     uno::Reference< beans::XPropertySetInfo > xPropSetInfo = xPropertySet->getPropertySetInfo();
-    OUString pName = "FrameInteropGrabBag";
     sal_Int32 nRotation = 0;
 
-    if ( xPropSetInfo->hasPropertyByName( pName ) )
+    if ( xPropSetInfo->hasPropertyByName( "FrameInteropGrabBag" ) )
     {
         uno::Sequence< beans::PropertyValue > propList;
-        xPropertySet->getPropertyValue( pName ) >>= propList;
+        xPropertySet->getPropertyValue( "FrameInteropGrabBag" ) >>= propList;
         for ( sal_Int32 nProp=0; nProp < propList.getLength(); ++nProp )
         {
             OUString propName = propList[nProp].Name;
@@ -352,8 +351,24 @@ void DocxAttributeOutput::WriteDMLTextFrame(sw::Frame* pParentFrame)
             XML_cy, aHeight.getStr(),
             FSEND);
     m_pSerializer->endElementNS(XML_a, XML_xfrm);
+    OUString shapeType = "rect";
+    if ( xPropSetInfo->hasPropertyByName( "FrameInteropGrabBag" ) )
+    {
+        uno::Sequence< beans::PropertyValue > propList;
+        xPropertySet->getPropertyValue( "FrameInteropGrabBag" ) >>= propList;
+        for ( sal_Int32 nProp=0; nProp < propList.getLength(); ++nProp )
+        {
+            OUString propName = propList[nProp].Name;
+            if ( propName == "mso-orig-shape-type")
+            {
+                propList[nProp].Value >>= shapeType;
+                break;
+            }
+        }
+    }
+
     m_pSerializer->singleElementNS(XML_a, XML_prstGeom,
-            XML_prst, "rect",
+            XML_prst, OUStringToOString( shapeType, RTL_TEXTENCODING_UTF8 ).getStr(),
             FSEND);
     m_bDMLTextFrameSyntax = true;
     m_pBodyPrAttrList = m_pSerializer->createAttrList();
